--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -28,6 +28,29 @@
         <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+        <section class="section-about">
+          <div class="u-center-text u-margin-bottom-8">
+            <h2 class="heading-secondary">
+                Exiciting tours for adventurous people
+            </h2>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-2">
+                <h3 class="sub">You are going to fall in love with nature</h3>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus commodi quam nihil, aut blanditiis nostrum velit. Voluptas sint praesentium modi rerum beatae expedita nemo, explicabo, tempora cumque quae dolore!</p>
+             
+                <h3 class="sub">Live adventures like you never have before</h3>
+                <p class="description">ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus commodi quam nihil, aut blanditiis nostrum velit. Voluptas sint praesentium modi rerum beatae expedita nemo, explicabo, tempora cumque quae dolore!</p>
+              </div>
+              <div class="col-1-of-2">
+                Image component
+              </div>
+            </div>
+          </div>
+        </section>
+    </main>
   </body>
 </html>
 
