--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -10,6 +10,7 @@
     />
 
     <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -30,7 +31,7 @@
     </header>
     <main>
         <section class="section-about">
-          <div class="u-center-text u-margin-bottom-8">
+          <div class="u-center-text u-margin-bottom-small">
             <h2 class="heading-secondary">
                 Exiciting tours for adventurous people
             </h2>
@@ -38,17 +39,36 @@
 
           <div class="row">
               <div class="col-1-of-2">
-                <h3 class="sub">You are going to fall in love with nature</h3>
+                <h3 class="sub u-margin-bottom-small">You are going to fall in love with nature</h3>
                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus commodi quam nihil, aut blanditiis nostrum velit. Voluptas sint praesentium modi rerum beatae expedita nemo, explicabo, tempora cumque quae dolore!</p>
              
-                <h3 class="sub">Live adventures like you never have before</h3>
+                <h3 class="sub u-margin-bottom-small">Live adventures like you never have before</h3>
                 <p class="description">ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus commodi quam nihil, aut blanditiis nostrum velit. Voluptas sint praesentium modi rerum beatae expedita nemo, explicabo, tempora cumque quae dolore!</p>
+
+                <a href="#" class="btn-text">Learn More &rarr;</a>
               </div>
               <div class="col-1-of-2">
-                Image component
+                <div class="composition">
+                  <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1" />
+                  <img src="img/nat-2-large.jpg"  alt="photo 2" class="composition__photo composition__photo--p2" />
+                  <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo  composition__photo--p3" />
+                </div>  
               </div>
             </div>
           </div>
+        </section>
+
+        <section class="section-feature">
+            <div class="row">
+                <div class="col-1-of-4">
+                  <div class="feature-box">
+                    <i class="icon-basic-world feature-box__icon"></i>
+                    <h3 class="sub u-margin-bottom-small">Explore the world</h3>
+                    <p class="feature-box__text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laboriosam velit labore ipsa, totam, excepturi, veniam accusamus voluptas dignissimos officia ipsum optio ducimus ullam inventore ipsam adipisci! Consequatur, omnis rem?
+                    </p>
+                  </div>
+            </div>
         </section>
     </main>
   </body>
